some changes to readme file

--- a/AirQualityStation/lib/README
+++ b/AirQualityStation/lib/README
@@ -39,6 +39,8 @@ int main (void)
 
 ```
 some changes
+ 
+some new changes
 
 PlatformIO Library Dependency Finder will find automatically dependent
 libraries scanning project source files.
